--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -73,9 +73,9 @@
    },
    "outputs": [],
    "source": [
-    "#Name : Vaishnavi Gonela\n",
-    "#Student Number : 202003912\n",
-    "#Stfx Email : x2020dxw@stfx.ca\n"
+    "#Name : Venkata Krishna Manne\n",
+    "#Student Number : 202103591\n",
+    "#Stfx Email : x2021dsv@stfx.ca\n"
    ]
   },
   {
